Update build.gradle of sub-module